finished updating project information

--- a/portfolio/start/index.html
+++ b/portfolio/start/index.html
@@ -506,7 +506,7 @@
                     With the combination of this interest and knowledge of programming, I decided to create Flight Track 247, a full stack web and mobile responsive application.
                   </p>
                   <ul class="list-inline">
-                    <li>Tools used: JavaScript(es6), React, CSS3, HTML5, Boostrap5, PostgreSQL, Node.js </li>
+                    <li>Tools used: JavaScript(es6), React, CSS3, HTML5, Bootstrap5, PostgreSQL, Node.js </li>
                     <li>Author:Andy Park</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -534,14 +534,17 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <h2 class="text-uppercase">CarHealth+</h2>
+                  <p class="item-intro text-muted">Car's service and recall lists in one go</p>
                   <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/car.png" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>Cars play a crucial role in our lives. They take us anywhere we need to go at any given moment.
+                    Which is why it is so important to keep up with all services and recalls it needs to take you and your family anywhere safely.
+                    With CarHealth+, an AJAX project application, will give you all the service list it needs based on the mileage entered.
+                    You can also see what kind of recalls and complaints are out there from NHTSA bulletin board to ensure the safety of the driver and passengers.
+                  </p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Explore</li>
-                    <li>Category: Graphic Design</li>
+                    <li>Tools used: JavaScript (es5 & es6), CSS3, HTML5</li>
+                    <li>Author: Andy Park</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fas fa-times"></i>
@@ -568,14 +571,15 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <h2 class="text-uppercase">Planet Journal</h2>
+                  <p class="item-intro text-muted">Discovered a planet?</p>
                   <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/planet.png" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>As our technology improves everyday, our ability to pierce through the uncharted territory of our universe advances as well.
+                    As a result, we find new planets at an increasing rate, which comes the question, "Are we alone in this universe?"
+                  Planet Journal is a simple application that allows user to save, edit, and delete information about the planet they've found. </p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Finish</li>
-                    <li>Category: Identity</li>
+                    <li>Tools used: JavaScript (es5), CSS3, HTML5</li>
+                    <li>Author: Andy Park</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fas fa-times"></i>
