--- a/portfolio/start/index.html
+++ b/portfolio/start/index.html
@@ -19,8 +19,9 @@
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet'
     type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.10.0/devicon.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&family=Spartan:wght@600&display=swap"
+    rel="stylesheet">
 
 
   <!-- Custom styles for this template -->
@@ -52,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+            <a class="nav-link js-scroll-trigger" href="#photo">Hobbies</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -68,7 +69,10 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in animation"> const dream = () => 'imagination into reality' </div>
+        <div class="intro-lead-in animation"> <span class="accent">const</span> <span class="accentCream">dream</span>
+          <span class="accentCream">=</span>
+          <span class="accent">()</span> <span class="accentTwo">=></span> <span class="accentTwo">'imagination</span>
+          <span class="accent">into</span class="accentTwo"> reality' </div>
         <!-- <div class="intro-lead-in">return 'imagination into reality'}</div> -->
         <!-- <div class="intro-heading text-uppercase">It's Nice To Meet You</div> -->
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Let's Start!</a>
@@ -80,9 +84,10 @@
   <section id="about">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Andy Park</h2>
-          <h3 class="section-subheading text-muted">Full Stack web developer</h3>
+        <div class="col-lg-12 text-center top-title">
+          <img class="rounded-circle mx-auto main-picture" src="img/about/me.jpg" alt="me" />
+          <h2 class="section-heading">Andy Park</h2>
+          <h3 class="section-subheading text-muted">Full stack web developer</h3>
         </div>
       </div>
       <div class="row">
@@ -95,10 +100,10 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>2012~</h4>
-                  <h4 class="subheading">on the road 24/7</h4>
+                  <h4 class="subheading">On the road 24/7</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted"> Rainy, snowy, or humid, it didn't matter! As long as that flight wasn't
+                  <p class="text-muted"> Rainy, snowy, or sunny, it didn't matter! As long as that flight wasn't
                     cancelled, I was there
                     on the other side of the country securing deals with local to global clients.
                     No, it wasn't the high that I got from securing
@@ -119,16 +124,16 @@
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">One valuable lesson that I've learned in sales is the importance
-                    of teamwork. Working cross functionally with management,logistics, and engineering team, I quickly
+                    of teamwork. Working cross functionally with management or engineering team, I quickly
                     realized that
-                    nothing can be done alone these days especially when there are so many moving parts!
+                    nothing can be done alone, especially when there are so many moving parts!
                   </p>
                 </div>
               </div>
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/about/tunnel.jpg" alt="tunnel">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -149,7 +154,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/about/challenge.jpg" alt="mountain">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -159,7 +164,8 @@
                 <div class="timeline-body">
                   <p class="text-muted"> I started off learning on my own little by little on Udemy. However, I quickly
                     realized that I wanted to push myself even further.
-                    That is when I decided to go full time student at LearningFuze. Even though it was one of the most
+                    That is when I decided to go full time as a student at LearningFuze. Even though it was one of the
+                    most
                     intense 14 weeks of my life,
                     I've gain so much knowledge in different tools like JavaScript,React, HTML5, CSS3, Node.js, and many
                     more!
@@ -169,7 +175,7 @@
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/about/journey.jpg" alt="road">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -183,6 +189,24 @@
                     </p>
                   </div>
                 </div>
+                <ul class="list-inline social-buttons">
+                  <li class="list-inline-item social-icon">
+                    <a href="#">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item social-icon">
+                    <a href="#">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item social-icon">
+                    <a href="#">
+                      <i class="fab fa-linkedin-in"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -191,7 +215,7 @@
   </section>
 
   <!-- Portfolio Grid -->
-  <section class="bg-light" id="portfolio">
+  <section class="bg-overRide" id="portfolio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -367,123 +391,60 @@
 
 
   <!-- Team -->
-  <section class="bg-light" id="team">
+  <section class="bg-light" id="photo">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">Hobbies</h2>
+          <h3 class="section-subheading text-muted">Creating memoriable moments in different parts of the world</h3>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-            <h4>Kay Garland</h4>
-            <p class="text-muted">Lead Designer</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-lg-6">
+            <div id="carouselExampleControls" class="carousel slide carousel-width" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class=" w-100" src="./img/about/lax.jpg" alt="LAX">
+                </div>
+                <div class="carousel-item">
+                  <img class="w-100" src="./img/about/europe.png" alt="Europe">
+                </div>
+                <div class="carousel-item">
+                  <img class="w-100" src="./img/about/concert.jpg" alt="concert">
+                </div>
+                <div class="carousel-item">
+                  <img class="w-100" src="./img/about/plane.png" alt="plane">
+                </div>
+                <div class="carousel-item">
+                  <img class="w-100" src="./img/about/national.jpg" alt="yosemite">
+                </div>
+                <div class="carousel-item">
+                  <img class="w-100" src="./img/about/ocean.jpg" alt="Big Sur">
+                </div>
+                <div class="carousel-item">
+                  <img class="w-100" src="./img/about/pari.jpg" alt="Paris">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-            <h4>Larry Parker</h4>
-            <p class="text-muted">Lead Marketer</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-            <h4>Diana Pertersen</h4>
-            <p class="text-muted">Lead Developer</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
+          <div class="col-sm-12 col-lg-6">
+            <h3 class="carousel-info-size">Photography</h3>
+            <P>We race against time, and every second that passes by becomes the past of its past.
+              I think that's why I love photography. It allows us to capture that special moment so that its with us
+              forever.
+            </P>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam
-            veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Clients -->
-  <section class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-          </a>
-        </div>
-      </div>
-    </div>
   </section>
 
   <!-- Contact -->
@@ -491,60 +452,20 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">Contact Info</h2>
+          <h3 class="section-subheading text-muted contact-subheading">Actively looking for opportunites.</h3>
+          <div class="col-lg-12 d-flex flex-column align-items-center justify-content-center">
+            <i class="fas fa-map-marker-alt alt spacing">&nbsp;Orange County, CA</i>
+            <i class="far fa-envelope color spacing">
+              <a href="mailto:apark1214@gmail.com">&nbsp; apark1214@gmail.com</a>
+            </i>
+            <i class="fas fa-phone color">
+              <a href="tel:+1(831)7378184">&nbsp;(831).737.8184</a>
+            </i>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <form id="contactForm" name="sentMessage" novalidate="novalidate">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required"
-                    data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required"
-                    data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required"
-                    data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required"
-                    data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="clearfix"></div>
-              <div class="col-lg-12 text-center">
-                <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send
-                  Message</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2018</span>
-        </div>
-        <div class="col-md-4">
-          <ul class="list-inline social-buttons">
+        <div class="col-lg-12 customized">
+          <ul class="list-inline social-buttons ">
             <li class="list-inline-item">
               <a href="#">
                 <i class="fab fa-twitter"></i>
@@ -560,8 +481,25 @@
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
           </ul>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <span class="copyright">Copyright &copy; Your Website 2018</span>
+        </div>
+
         <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
