changed fonts and header styles

--- a/portfolio/start/index.html
+++ b/portfolio/start/index.html
@@ -19,6 +19,7 @@
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet'
     type='text/css'>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.10.1/devicon.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&family=Spartan:wght@600&display=swap"
     rel="stylesheet">
@@ -288,98 +289,84 @@
       <div class="row text-center">
         <div class="col-md-3">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fab fa-js-square fa-stack-1x tool-size fa-inverse"></i>
           </span>
           <h4 class="service-heading">JAVASCRIPT</h4>
         </div>
         <div class="col-md-3">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fab fa-react fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">REACT</h4>
         </div>
         <div class="col-md-3">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fab fa-html5 fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">HTML5</h4>
         </div>
         <div class="col-md-3">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fab fa-css3-alt fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">CSS3</h4>
         </div>
         <div class="col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="devicon-bootstrap-plain fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">BOOTSTRAP</h4>
         </div>
         <div class="col-md-3">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fab fa-node-js fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">NODE.JS</h4>
         </div>
         <div class="col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="devicon-express-original fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">EXPRESS.JS</h4>
         </div>
         <div class="col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="devicon-webpack-plain fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">WEBPACK</h4>
         </div>
         <div class="col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="devicon-postgresql-plain fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">POSTGRESQL</h4>
         </div>
         <div class="col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="devicon-npm-original-wordmark fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">NPM</h4>
         </div>
         <div class="col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="devicon-babel-plain fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">BABEL</h4>
         </div>
         <div class="col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="devicon-heroku-original fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">HEROKU</h4>
         </div>
         <div class="col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="devicon-git-plain fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">GIT</h4>
         </div>
         <div class="col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="devicon-visualstudio-plain fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">VISUAL STUDIO</h4>
@@ -394,57 +381,53 @@
   <section class="bg-light" id="photo">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Hobbies</h2>
-          <h3 class="section-subheading text-muted">Creating memoriable moments in different parts of the world</h3>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-lg-6">
-            <div id="carouselExampleControls" class="carousel slide carousel-width" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class=" w-100" src="./img/about/lax.jpg" alt="LAX">
-                </div>
-                <div class="carousel-item">
-                  <img class="w-100" src="./img/about/europe.png" alt="Europe">
-                </div>
-                <div class="carousel-item">
-                  <img class="w-100" src="./img/about/concert.jpg" alt="concert">
-                </div>
-                <div class="carousel-item">
-                  <img class="w-100" src="./img/about/plane.png" alt="plane">
-                </div>
-                <div class="carousel-item">
-                  <img class="w-100" src="./img/about/national.jpg" alt="yosemite">
-                </div>
-                <div class="carousel-item">
-                  <img class="w-100" src="./img/about/ocean.jpg" alt="Big Sur">
-                </div>
-                <div class="carousel-item">
-                  <img class="w-100" src="./img/about/pari.jpg" alt="Paris">
-                </div>
+        <div class="col-sm-12 col-lg-6">
+          <div id="carouselExampleControls" class="carousel slide carousel-width" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class=" w-100" src="./img/about/lax.jpg" alt="LAX">
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+              <div class="carousel-item">
+                <img class="w-100" src="./img/about/europe.png" alt="Europe">
+              </div>
+              <div class="carousel-item">
+                <img class="w-100" src="./img/about/concert.jpg" alt="concert">
+              </div>
+              <div class="carousel-item">
+                <img class="w-100" src="./img/about/plane.png" alt="plane">
+              </div>
+              <div class="carousel-item">
+                <img class="w-100" src="./img/about/national.jpg" alt="yosemite">
+              </div>
+              <div class="carousel-item">
+                <img class="w-100" src="./img/about/ocean.jpg" alt="Big Sur">
+              </div>
+              <div class="carousel-item">
+                <img class="w-100" src="./img/about/pari.jpg" alt="Paris">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
-          <div class="col-sm-12 col-lg-6">
+        </div>
+          <div class="col-sm-12 col-lg-6 hobby-margin">
+            <h2 class="section-heading text-uppercase">Hobbies</h2>
+            <h3 class="section-subheading text-muted">Creating memoriable moments in different parts of the world</h3>
             <h3 class="carousel-info-size">Photography</h3>
-            <P>We race against time, and every second that passes by becomes the past of its past.
+            <P class="description">We race against time, and every second that passes by becomes the past of its past.
               I think that's why I love photography. It allows us to capture that special moment so that its with us
               forever.
             </P>
           </div>
         </div>
       </div>
+    </div>
   </section>
 
   <!-- Contact -->
@@ -541,8 +524,9 @@
                   247, a full stack web and mobile responsive application.
                 </p>
                 <ul class="list-inline">
-                  <li>Developed using: JavaScript(es6), React, CSS3, HTML5, Bootstrap5, PostgreSQL, Node.js </li>
-                  <li>Author:Andy Park</li>
+                  <li class="projectInfo"><b>Developed using:</b> JavaScript(es6), React, CSS3, HTML5, Bootstrap5,
+                    PostgreSQL, Node.js </li>
+                  <li class="projectInfo"><b>Author:</b> Andy Park</li>
                 </ul>
                 <a href="https://github.com/AndyPark20/Flight-Track-247"><button class="btn btn-primary" type="button">
                     <i class="fab fa-github"></i>
@@ -575,7 +559,8 @@
                 <h2 class="text-uppercase">CarHealth+</h2>
                 <p class="item-intro text-muted">Car's service and recall lists in one go</p>
                 <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/car.png" alt="">
-                <p>Cars play a crucial role in our lives. They take us anywhere we need to go at any given moment.
+                <p class="description">Cars play a crucial role in our lives. They take us anywhere we need to go at any
+                  given moment.
                   Which is why it is so important to keep up with all services and recalls it needs to take you and your
                   family anywhere safely.
                   With CarHealth+, an AJAX project application, will give you all the service list it needs based on the
@@ -584,8 +569,8 @@
                   the safety of the driver and passengers.
                 </p>
                 <ul class="list-inline">
-                  <li>Developed using: JavaScript (es5 & es6), CSS3, HTML5</li>
-                  <li>Author: Andy Park</li>
+                  <li class="projectInfo"><b>Developed using:</b> JavaScript (es5 & es6), CSS3, HTML5</li>
+                  <li class="projectInfo"><b>Author:</b> Andy Park</li>
                 </ul>
                 <a href="https://github.com/AndyPark20/ajax-project"><button class="btn btn-primary" type="button">
                     <i class="fab fa-github"></i>
@@ -618,15 +603,16 @@
                 <h2 class="text-uppercase">Planet Journal</h2>
                 <p class="item-intro text-muted">Discovered a planet?</p>
                 <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/planet.png" alt="">
-                <p>As our technology improves everyday, our ability to pierce through the uncharted territory of our
+                <p class="description">As our technology improves everyday, our ability to pierce through the uncharted
+                  territory of our
                   universe advances as well.
                   As a result, we find new planets at an increasing rate, which comes the question, "Are we alone in
                   this universe?"
                   Planet Journal is a simple application that allows user to save, edit, and delete information about
                   the planet they've found. </p>
                 <ul class="list-inline">
-                  <li>Developed using: JavaScript (es5), CSS3, HTML5</li>
-                  <li>Author: Andy Park</li>
+                  <li class="projectInfo"><b>Developed using:</b> JavaScript (es5), CSS3, HTML5</li>
+                  <li class="projectInfo"><b>Author:</b> Andy Park</li>
                 </ul>
                 <a href="https://github.com/AndyPark20/planet-journal"><button class="btn btn-primary" type="button">
                     <i class="fab fa-github"></i>
