adding href to a tags

--- a/portfolio/start/index.html
+++ b/portfolio/start/index.html
@@ -193,17 +193,22 @@
                 <ul class="list-inline social-buttons">
                   <li class="list-inline-item social-icon">
                     <a href="#">
-                      <i class="fab fa-twitter"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item social-icon">
-                    <a href="#">
-                      <i class="fab fa-facebook-f"></i>
+                      <i class="fab fa-github"></i>
                     </a>
                   </li>
                   <li class="list-inline-item social-icon">
                     <a href="#">
                       <i class="fab fa-linkedin-in"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item social-icon">
+                    <a href="#">
+                      <i class="far fa-envelope"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item social-icon">
+                    <a href="#">
+                      <i class="far fa-file"></i>
                     </a>
                   </li>
                 </ul>
@@ -281,91 +286,91 @@
   <section id="skills">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-12 col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Skills</h2>
           <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
         </div>
       </div>
       <div class="row text-center">
-        <div class="col-md-3">
+        <div class="col-6 col-md-3">
           <span class="fa-stack fa-4x">
             <i class="fab fa-js-square fa-stack-1x tool-size fa-inverse"></i>
           </span>
           <h4 class="service-heading">JAVASCRIPT</h4>
         </div>
-        <div class="col-md-3">
+        <div class="col-6 col-md-3">
           <span class="fa-stack fa-4x">
             <i class="fab fa-react fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">REACT</h4>
         </div>
-        <div class="col-md-3">
+        <div class="col-6 col-md-3">
           <span class="fa-stack fa-4x">
             <i class="fab fa-html5 fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">HTML5</h4>
         </div>
-        <div class="col-md-3">
+        <div class="col-6 col-md-3">
           <span class="fa-stack fa-4x">
             <i class="fab fa-css3-alt fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">CSS3</h4>
         </div>
-        <div class="col-md-3 custom-icon-master">
+        <div class="col-6 col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
             <i class="devicon-bootstrap-plain fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">BOOTSTRAP</h4>
         </div>
-        <div class="col-md-3">
+        <div class="col-6 col-md-3">
           <span class="fa-stack fa-4x">
             <i class="fab fa-node-js fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">NODE.JS</h4>
         </div>
-        <div class="col-md-3 custom-icon-master">
+        <div class="col-6 col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
             <i class="devicon-express-original fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">EXPRESS.JS</h4>
         </div>
-        <div class="col-md-3 custom-icon-master">
+        <div class="col-6 col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
             <i class="devicon-webpack-plain fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">WEBPACK</h4>
         </div>
-        <div class="col-md-3 custom-icon-master">
+        <div class="col-6 col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
             <i class="devicon-postgresql-plain fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">POSTGRESQL</h4>
         </div>
-        <div class="col-md-3 custom-icon-master">
+        <div class="col-6 col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
             <i class="devicon-npm-original-wordmark fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">NPM</h4>
         </div>
-        <div class="col-md-3 custom-icon-master">
+        <div class="col-6 col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
             <i class="devicon-babel-plain fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">BABEL</h4>
         </div>
-        <div class="col-md-3 custom-icon-master">
+        <div class="col-6 col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
             <i class="devicon-heroku-original fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">HEROKU</h4>
         </div>
-        <div class="col-md-3 custom-icon-master">
+        <div class="col-6 col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
             <i class="devicon-git-plain fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">GIT</h4>
         </div>
-        <div class="col-md-3 custom-icon-master">
+        <div class="col-6 col-md-3 custom-icon-master">
           <span class="fa-stack fa-4x custom-icon">
             <i class="devicon-visualstudio-plain fa-stack-1x fa-inverse"></i>
           </span>
@@ -435,15 +440,15 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Info</h2>
-          <h3 class="section-subheading text-muted contact-subheading">Actively looking for opportunites.</h3>
+          <h2 class="section-heading text-uppercase contact-info-name">Andy Park</h2>
+          <h3 class="section-subheading contact-subheading contact-style-heading">Actively looking for opportunites.</h3>
           <div class="col-lg-12 d-flex flex-column align-items-center justify-content-center">
-            <i class="fas fa-map-marker-alt alt spacing">&nbsp;Orange County, CA</i>
+            <i class="fas fa-map-marker-alt alt spacing contact-style">&nbsp;Orange County, CA</i>
             <i class="far fa-envelope color spacing">
-              <a href="mailto:apark1214@gmail.com">&nbsp; apark1214@gmail.com</a>
+              <a href="mailto:apark1214@gmail.com" class="contact-style">&nbsp; apark1214@gmail.com</a>
             </i>
             <i class="fas fa-phone color">
-              <a href="tel:+1(831)7378184">&nbsp;(831).737.8184</a>
+              <a href="tel:+1(831)7378184" class="contact-style">&nbsp;(831).737.8184</a>
             </i>
           </div>
         </div>
@@ -479,11 +484,11 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-12 col-md-6">
           <span class="copyright">Copyright &copy; Your Website 2018</span>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-12 col-md-6">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
               <a href="#">Privacy Policy</a>
